Fix layout issues and add height to header

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -168,6 +168,7 @@ header {
   width:300px;
   float:left;
   position:fixed;
+  height: 100vh;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
